k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometeusz
  labels:
    app: prometeusz
    version: phase4
